--- a/src/VelcroPhysics.MonoGame.Samples.Demo/VelcroPhysics.MonoGame.Samples.Demo.csproj
+++ b/src/VelcroPhysics.MonoGame.Samples.Demo/VelcroPhysics.MonoGame.Samples.Demo.csproj
@@ -1,22 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <PublishReadyToRun>false</PublishReadyToRun>
-    <TieredCompilation>false</TieredCompilation>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <PublishReadyToRun>false</PublishReadyToRun>
+        <TieredCompilation>false</TieredCompilation>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\VelcroPhysics.MonoGame.ContentPipelines.SVGImport\VelcroPhysics.MonoGame.Content.SVGImport.csproj" />
-    <ProjectReference Include="..\VelcroPhysics.MonoGame.DebugView\VelcroPhysics.MonoGame.DebugView.csproj" />
-    <ProjectReference Include="..\VelcroPhysics\VelcroPhysics.MonoGame.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\VelcroPhysics.MonoGame.ContentPipelines.SVGImport\VelcroPhysics.MonoGame.Content.SVGImport.csproj"/>
+        <ProjectReference Include="..\VelcroPhysics.MonoGame.DebugView\VelcroPhysics.MonoGame.DebugView.csproj"/>
+        <ProjectReference Include="..\VelcroPhysics\VelcroPhysics.MonoGame.csproj"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
+        <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
+        <PackageReference Update="MinVer" Version="6.0.0" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+    </ItemGroup>
 
 </Project>
