--- a/src/VelcroPhysics.Tests/VelcroPhysics.Tests.csproj
+++ b/src/VelcroPhysics.Tests/VelcroPhysics.Tests.csproj
@@ -1,18 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="all" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="xunit" Version="2.9.3"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.1" PrivateAssets="all"/>
+        <PackageReference Update="MinVer" Version="6.0.0"/>
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\VelcroPhysics\VelcroPhysics.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\VelcroPhysics\VelcroPhysics.csproj"/>
+    </ItemGroup>
 
 </Project>
