--- a/src/VelcroPhysics/VelcroPhysics.MonoGame.csproj
+++ b/src/VelcroPhysics/VelcroPhysics.MonoGame.csproj
@@ -1,20 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Genbox.VelcroPhysics</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <RootNamespace>Genbox.VelcroPhysics</RootNamespace>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <DefineConstants>$(DefineConstants);MONOGAME</DefineConstants>
-  </PropertyGroup>
+    <PropertyGroup>
+        <DefineConstants>$(DefineConstants);MONOGAME</DefineConstants>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Primitives\*.cs" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Primitives\*.cs"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
+        <PackageReference Update="MinVer" Version="6.0.0" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+    </ItemGroup>
 
 </Project>
