--- a/src/VelcroPhysics/VelcroPhysics.csproj
+++ b/src/VelcroPhysics/VelcroPhysics.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <DefineConstants>$(DefineConstants);STANDARD_IMPLEMENTATION</DefineConstants>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <DefineConstants>$(DefineConstants);STANDARD_IMPLEMENTATION</DefineConstants>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0"/>
+        <PackageReference Update="MinVer" Version="6.0.0"/>
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0"/>
+    </ItemGroup>
 
 </Project>
